getting jwt token in console

--- a/src/components/adminComponent/adminComponent.module.css
+++ b/src/components/adminComponent/adminComponent.module.css
@@ -7,10 +7,12 @@
     display: grid;
     align-content: center;
     justify-content: center;
+    padding: 10px;
 }
 .Item{
     margin: 5px;
     font-size: 20px;
+    align-items: center;
 }
 .Cancelbtn{
     margin: 10px;
