--- a/src/components/ui/Model/modelUI.module.css
+++ b/src/components/ui/Model/modelUI.module.css
@@ -2,14 +2,18 @@
     position: fixed;
     z-index: 500;
     background-color: white;
-    width: 70%;
+    width: 60%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
-    left: 15%;
-    top:30%;
+    left: 20%;
+    top:15%;
+    /* border: 0; */
     box-sizing: border-box;
     transition: all 0.3s ease-out;
-    height: 50%;
+    /* height: 50%; */
+    /* max-width: calc(100vw - 200px); */
+    max-height: calc(100vh - 200px);
+    overflow-y: auto;
 }
 
